--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
@@ -17,6 +18,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
